fix overflow in styles

--- a/packages/devextreme-scss/scss/widgets/base/cardView/content_view/content/card/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/base/cardView/content_view/content/card/_index.scss
@@ -10,4 +10,5 @@
   border: $cardview-card-border-size solid $cardview-card-border-color;
   border-radius: $cardview-card-border-radius;
   background-color: $cardview-card-background-color;
+  overflow: hidden;
 }
